# zero2prod

./: Cargo.toml
.github/workflows/: audit-on-push.yml  main.yml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
