[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls", # Use tokio
    "macros", # Gives us access to macros
    "postgres", # Gives us access to postgres specific syntax
    "uuid", # Enables linking with the uuid crate
    "chrono", # Converts the timestamptz to a DateTime format
    "migrate" # Allows to access to migrations
]

[dev-dependencies]
reqwest = "0.11.14"
